vertical alignment corrected

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2421,8 +2421,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #4A87C8;
+  border-color: #4A87C8;
 }
 
 .btn-primary:hover {
@@ -2437,8 +2437,8 @@ fieldset:disabled a.btn {
 
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #4A87C8;
+  border-color: #4A87C8;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
